# minGPT

./: .gitignore  README.md  demo.ipynb  generate.ipynb  key_value_cache.ipynb  pyproject.toml
gpt-2-video/: requirements.txt  train_gpt2.py
gpt-2-video/charts/: generate_charts.py
mingpt/: attention.py  bpe.py  model.py  trainer.py  utils.py
projects/adder/: adder.py
projects/chargpt/: chargpt.py
tests/: test_huggingface_import.py
